--- a/Nova pasta/style.css
+++ b/Nova pasta/style.css
@@ -3,6 +3,38 @@ body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+input{
+    width: 95%;
+    height: 20px;
+    padding: 0.9rem;
+    font-size: 1.2rem;
+    border-radius: 5px;
+    border: 0;
+    margin: 10px;
+
+}
+input:focus{
+    outline: none;
+    box-shadow: 0 0 10px #009e9e;
+}
+a{
+    color: #e9e9e9;
+    font-size: 0.8rem;
+}
+button{
+    margin-top: 1.2rem;
+    width: 100%;
+    padding: 0.9rem 2rem;
+    color: #006a6a;
+    background-color: #ccc;
+    font-size: 1rem;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    }
+    button:hover{
+        background-color: #e9e9e9;
+    }
 .container{
     background-color: #e9e9e9;
     margin: auto;
@@ -14,7 +46,7 @@ overflow: hidden;
 
 }
 .header{
-padding: 2.5rem;
+padding: 0.9rem;
 
 }
 
@@ -64,23 +96,19 @@ font-size:0.9rem;
 font-style: italic;
 margin-left: 0.9rem;
 }
-.button{
-margin-top: 1.2rem;
-width: 100%;
-padding: 0.9rem 2rem;
-color: #006a6a;
-background-color: #ccc;
-font-size: 1rem;
-border-radius: 4px;
-border: none;
-cursor: pointer;
-}
-.button:hover{
-    background-color: #e9e9e9;
-}
+
 .image.group{
     text-align: center;
 }
+.form-register{
+    background-color: #006a6a;
+    padding: 1.2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: space-around;
+}
+
 @media screen and (max-width:620px){
     html{
         font-size: 14px;
