--- a/style.css
+++ b/style.css
@@ -81,6 +81,20 @@ cursor: pointer;
 .image.group{
     text-align: center;
 }
+
+.form-register{
+    background-color: #006a6a;
+    padding: 1.2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: space-around;
+}
+
+
+
+
+
 @media screen and (max-width:620px){
     html{
         font-size: 14px;
